--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
         <div class="test_image_and_result col-xs-12">
             <li class="col-sm-4 col-xs-12">
                 <b id="test_image">Test Image - </b>
-                <img src="water_bottle.jpeg" class="img-responsive">
+                <img src="water_bottle.jpeg " class="img-responsive">
             </li>
 
             <h5 class="col-sm-4 col-xs-12">
-                Output on <b id="output_GoogleLens">GOOGLE LENS</b>
-                <span></span>
+                Output on <b>GOOGLE LENS</b>
+                <span id="googleLensResult"></span>
             </h5>
 
 
             <h5 class="col-sm-4 col-xs-12">
                 Output on <b id="output_MobileNet">Mobilenet Model</b>
-                <span></span>
+                <span id="mobileNet result"></span>
             </h5>
 
             <div class="mini_results" class="col-xs-12">
@@ -51,6 +51,8 @@
         </ol>
 
     </center>
+
+    <h4> I have tested 6 items and it seems Google Lens has been more succesful by giving more accurate information. While Mobilenet is not as accurate because it's not giving specific information</h4>
 
     <div class="copy_right_footer">
         Developed By - Aimee Raballah
